--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset='UTF-8'>
     <title>engage-il</title>
   </head>
-  <body>
+  <body style='margin: 0'>
     <div id='root'></div>
     <script src='bundle.js'></script>
   </body>
