--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset='UTF-8'>
     <title>engage-il</title>
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
   </head>
-  <body style='margin: 0'>
+  <body style='margin: 0; background-color: #FAFAFA'>
     <div id='root'></div>
     <script src='bundle.js'></script>
   </body>
