--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset='UTF-8'>
     <title>engage-il</title>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700" rel="stylesheet">
   </head>
-  <body style='margin: 0; background-color: #FAFAFA'>
+  <body style='margin: 0; background-color: #f9fdff'>
     <div id='root'></div>
     <script src='bundle.js'></script>
   </body>
